fixed onhover function to have nav div remain visible until mouse leaves nav adjusted top margin on contact page for wide screen views

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -78,6 +78,9 @@
 }
 
 @media screen and (min-width:1200px){
+  .main {
+    padding-top: 20rem;
+  }
   .main p {
     font-size: 3vw;
   }
